kubernetes/deploy/splitpro/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitpro
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: splitpro
      release: splitpro
  template:
    metadata:
      labels:
        app: splitpro
        release: splitpro
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        # --- General ---
        - image: ossapps/splitpro:latest
          imagePullPolicy: Always
          name: splitpro
          # ---------------

          # --- Environment ---
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          # ---------------

          # --- Probes ---
          readinessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            httpGet:
              scheme: HTTP
              port: 3000
              path: /
          livenessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 5
            tcpSocket:
              port: 3000
          # ---------------

          # --- Mounts ---
          volumeMounts:
            - mountPath: /app/uploads
              name: splitpro
          # ---------------
      volumes:
        - name: splitpro
          persistentVolumeClaim:
            claimName: splitpro-data
