kubernetes/deploy/splitpro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splitpro
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: splitpro
    release: splitpro
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: splitpro-postgres
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: postgres
  selector:
    app: splitpro-postgres
    release: splitpro-postgres
  type: ClusterIP
