kubernetes/deploy/splitpro/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: splitpro
spec:
  rules:
  - host: splitpro.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: splitpro
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
